lox-tests/tests/operator/negate_nonnum.stderr
ERROR: Unsupported operation '-' on type 'string'
 --> 1:1
  |
1 | -"s"; // expect runtime error: Operand must be a number.
  | ^--^
